[gd_scene load_steps=6 format=3 uid="uid://c8lxl5worx2xl"]

[ext_resource type="Script" uid="uid://bofebj000gcgt" path="res://scripts/SingleDropper.gd" id="1_myn77"]
[ext_resource type="PackedScene" uid="uid://b66qrlaaoco3e" path="res://scenes/FallingWord.tscn" id="2_0kuvg"]
[ext_resource type="PackedScene" uid="uid://c74jkyyo01yaa" path="res://scenes/PauseMenu.tscn" id="3_5v4cs"]
[ext_resource type="PackedScene" uid="uid://d31j1y5h5acw7" path="res://scenes/Countdown.tscn" id="4_e81qs"]
[ext_resource type="AudioStream" uid="uid://tcbqjwfxk0mv" path="res://assets/Music/Take Cover Loop.ogg" id="5_y8dx6"]

[node name="SingleDropper" type="Node2D"]
script = ExtResource("1_myn77")
word_scene = ExtResource("2_0kuvg")
pause_menu_scene = ExtResource("3_5v4cs")
countdown_scene = ExtResource("4_e81qs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 654.0
color = Color(0.15781322, 0.15781322, 0.15781322, 1)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 21.0
offset_top = 11.0
offset_right = 91.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 25
text = "Score = 0"

[node name="LivesLabel" type="Label" parent="."]
offset_left = 1022.0
offset_top = 16.0
offset_right = 1124.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 25
text = "Lives = 3"

[node name="InputLabel" type="Label" parent="."]
offset_left = 513.0
offset_top = 582.0
offset_right = 635.0
offset_bottom = 618.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 523.0
offset_top = 11.0
offset_right = 597.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 25
text = "Speed = 0"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 227.0
offset_top = 231.0
offset_right = 395.0
offset_bottom = 365.0
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y8dx6")
volume_db = 20.0
autoplay = true
parameters/looping = true
